--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "devDependencies": {
     "chai": "^1.10.0",
-    "jquery": "^2.1.1",
+    "jquery": "~>3.0.0",
     "jsdom": "^1.2.2",
     "mocha": "^2.0.1"
   },
